# TimeTracking

./: .gitignore  LICENSE  PLAN.md  README.md  package-lock.json  package.json  workday-time-2026-07-01.csv  workday-time-export-2026-07-01.csv  workday-time-export-2026-07-01.xlsx
.github/workflows/: release.yml
assets/: app-icon.icns
dev/: face-landmark-main.js  face-landmark-test.html  face-landmark-test.js  face-test-main.js  face-test-preload.js  face-test.html  face-test.js
scripts/: after-pack.js  db-smoke.js  make-ico.js  make-mac-icon.js
src/: index.html  main.js  preload.js  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
